.logo{     max-width: 20%;     align-items: right;     position: fixed;   }

--- a/style.css
+++ b/style.css
@@ -38,7 +38,11 @@
   margin-left: 10%;
   margin-top: 30%;
 
-  
+  .logo{
+    max-width: 20%;
+    align-items: right;
+    position: fixed;
+  }
   
  }
  
